--- a/app/src/index.css
+++ b/app/src/index.css
@@ -82,6 +82,10 @@ p {
 }
 
 .col-2 {
+  display: flex;
+  justify-content: center;
+  align-items: right;
+  flex-direction: column;
   flex-basis: 50%;
   min-width: 300px;
 }
@@ -110,6 +114,7 @@ p {
   margin: 30px 0;
   border-radius: 30px;
   transition: background 0.5s;
+  width: 300px;
 }
 
 .btn:hover {
