--- a/app/src/index.css
+++ b/app/src/index.css
@@ -75,7 +75,7 @@ p {
 
 .linha {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px;
@@ -102,8 +102,38 @@ p {
 }
 
 .col-2 p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
   font-weight: 600;
   color: var(--cor-btn-fonte);
+}
+
+.compTitulo {
+  padding-top: 6%;
+}
+
+.comp {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+  /* width: 70%; */
+}
+.comp2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: left;
+  width: 70%;
+}
+
+.comp p {
+  color: var(--cor-fonte-corpo);
+  padding: 6%;
 }
 
 .btn {
@@ -146,11 +176,19 @@ p {
 }
 
 .col-4 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 20%;
   flex-basis: 25%;
   min-width: 200px;
   padding: 20px;
   margin-bottom: 50px;
   transition: transform 0.5s;
+}
+
+.col-4 * {
+  align-self: flex-start;
 }
 
 .col-4:hover {
