--- a/app/src/Pages/Register/Register.css
+++ b/app/src/Pages/Register/Register.css
@@ -9,7 +9,7 @@
   color: #fff;
 }
 
-.login-form {
+.signup-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,11 +19,11 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 1);
   background: #555;
   color: black;
-  height: 35vh;
+  /* height: 35vh; */
   width: 30vw;
 }
 
-.form-login-input {
+.form-input {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,7 +32,7 @@
   width: 100%;
 }
 
-.form-login-input input {
+.form-input input {
   padding: 10px;
   /* margin: 10px; */
   width: 100%;
@@ -52,7 +52,7 @@
   color: #fff;
   border: none;
   border-radius: 5px;
-  width: 40%;
+  width: 50%;
 }
 
 .submit-button:hover {
