--- a/app/src/index.css
+++ b/app/src/index.css
@@ -204,7 +204,7 @@ p {
 .titulo {
   position: relative;
   line-height: 60px;
-  margin: 0 auto 80px;
+  /* margin: 1rem; */
   text-align: center;
   color: var(--cor-fonte-corpo);
 }
