--- a/app/src/Pages/Login/Login.css
+++ b/app/src/Pages/Login/Login.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 5px;
   font-family: "Ubuntu", sans-serif;
-  height: 80vh;
+  /* height: 80vh; */
   background-color: #fff;
   color: #fff;
 }
